k8s-azure/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-container
          image: docker07.azurecr.io/backend-ms
          imagePullPolicy: Always
          ports:
            - containerPort: 9010
