k8s-azure/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9010
